feat: print new dataframe displaying token fees info

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -282,6 +282,42 @@
     }
    },
    "id": "e79b2f6a4ead2cad"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                                                token  token_fee  \\\npool                   token_ix                                    \nB-rETH-STABLE          0                         rETH   1.393660   \n                       1                         WETH  12.380378   \ncbETH-bb-a-WETH-BPT    0         cbETH-bb-a-WETH-BPT    0.000000   \n                       1                    bb-a-WETH   0.000000   \n                       2                        cbETH   0.000000   \nB-staFiETH-WETH-Stable 0                         rETH   1.532580   \n                       1                         WETH   0.112096   \nB-wstETH-WETH-Stable   0                       wstETH   2.410589   \n                       1                         WETH   0.001399   \nwstETH/rETH/cbETH      0                        cbETH   0.000000   \n                       1            wstETH/rETH/cbETH   0.000000   \n                       2                       wstETH   0.000000   \n                       3                         rETH   0.000000   \n\n                                          time_from             time_to  \\\npool                   token_ix                                           \nB-rETH-STABLE          0        2023-08-02 20:38:29 2023-08-16 16:45:43   \n                       1        2023-08-02 20:38:29 2023-08-16 16:45:43   \ncbETH-bb-a-WETH-BPT    0        2023-08-02 20:38:29 2023-08-16 16:45:43   \n                       1        2023-08-02 20:38:29 2023-08-16 16:45:43   \n                       2        2023-08-02 20:38:29 2023-08-16 16:45:43   \nB-staFiETH-WETH-Stable 0        2023-08-02 20:38:29 2023-08-16 16:45:43   \n                       1        2023-08-02 20:38:29 2023-08-16 16:45:43   \nB-wstETH-WETH-Stable   0        2023-08-02 20:38:29 2023-08-16 16:45:43   \n                       1        2023-08-02 20:38:29 2023-08-16 16:45:43   \nwstETH/rETH/cbETH      0        2023-08-02 20:38:29 2023-08-16 16:45:43   \n                       1        2023-08-02 20:38:29 2023-08-16 16:45:43   \n                       2        2023-08-02 20:38:29 2023-08-16 16:45:43   \n                       3        2023-08-02 20:38:29 2023-08-16 16:45:43   \n\n                                    chain  \npool                   token_ix            \nB-rETH-STABLE          0          mainnet  \n                       1          mainnet  \ncbETH-bb-a-WETH-BPT    0          mainnet  \n                       1          mainnet  \n                       2          mainnet  \nB-staFiETH-WETH-Stable 0          mainnet  \n                       1          mainnet  \nB-wstETH-WETH-Stable   0         arbitrum  \n                       1         arbitrum  \nwstETH/rETH/cbETH      0         arbitrum  \n                       1         arbitrum  \n                       2         arbitrum  \n                       3         arbitrum  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th></th>\n      <th>token</th>\n      <th>token_fee</th>\n      <th>time_from</th>\n      <th>time_to</th>\n      <th>chain</th>\n    </tr>\n    <tr>\n      <th>pool</th>\n      <th>token_ix</th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">B-rETH-STABLE</th>\n      <th>0</th>\n      <td>rETH</td>\n      <td>1.393660</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>WETH</td>\n      <td>12.380378</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th rowspan=\"3\" valign=\"top\">cbETH-bb-a-WETH-BPT</th>\n      <th>0</th>\n      <td>cbETH-bb-a-WETH-BPT</td>\n      <td>0.000000</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>bb-a-WETH</td>\n      <td>0.000000</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>cbETH</td>\n      <td>0.000000</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">B-staFiETH-WETH-Stable</th>\n      <th>0</th>\n      <td>rETH</td>\n      <td>1.532580</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>WETH</td>\n      <td>0.112096</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>mainnet</td>\n    </tr>\n    <tr>\n      <th rowspan=\"2\" valign=\"top\">B-wstETH-WETH-Stable</th>\n      <th>0</th>\n      <td>wstETH</td>\n      <td>2.410589</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>WETH</td>\n      <td>0.001399</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th rowspan=\"4\" valign=\"top\">wstETH/rETH/cbETH</th>\n      <th>0</th>\n      <td>cbETH</td>\n      <td>0.000000</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>wstETH/rETH/cbETH</td>\n      <td>0.000000</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>wstETH</td>\n      <td>0.000000</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>arbitrum</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>rETH</td>\n      <td>0.000000</td>\n      <td>2023-08-02 20:38:29</td>\n      <td>2023-08-16 16:45:43</td>\n      <td>arbitrum</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Now parse token_fees into dataframe and sort by chain and token fee.\n",
+    "# Notice, that token_fees is a dictionary of lists, so we need to flatten it first\n",
+    "joint_token_fees = {**arb_token_fees, **mainnet_token_fees}\n",
+    "joint_token_fees_df = pd.DataFrame.from_dict({(i,j): joint_token_fees[i][j] \n",
+    "                           for i in joint_token_fees.keys() \n",
+    "                           for j in range(len(joint_token_fees[i]))}, orient='index')\n",
+    "# Remove index name\n",
+    "joint_token_fees_df.index.names = ['pool', 'token_ix']\n",
+    "# Sort by chain and token name\n",
+    "joint_token_fees_df.sort_values(by=['chain'], ascending=False, inplace=True)\n",
+    "joint_token_fees_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-16T13:57:58.436047Z",
+     "start_time": "2023-08-16T13:57:58.431257Z"
+    }
+   },
+   "id": "7720d12cbfdc5ea9"
   }
  ],
  "metadata": {
