feat: populate bpt price data from BAL API

--- a/notebooks/pool_fees_and_accounting.ipynb
+++ b/notebooks/pool_fees_and_accounting.ipynb
@@ -14,9 +14,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ARBITRUM\n",
+      "1664.325854325530001134427742\n",
+      "1678.238862410888894378599026\n",
+      "1670.977798491140066241908011\n",
+      "0.9906605958376910375689404110\n",
+      "1.173851070915343989675147645\n",
+      "1668.730132563883403688566128\n",
+      "1.000025925199399329690246051\n",
+      "MAINNET\n",
+      "1666.438758767065592600247809\n",
+      "1711.871839104478311999119538\n",
+      "1655.734096347396131918271244\n",
+      "1665.661926991577507295464904\n",
+      "1670.362861604763453888576930\n",
+      "24.91420924682509453423001572\n",
+      "1678.115126894037007703250708\n",
+      "0.9849123889501633554769046261\n",
+      "1674.674304490441818435885528\n",
+      "55.35542349787851525628040549\n",
+      "60.22846679963345422730886857\n",
+      "208.2058275694412925067884878\n",
+      "0.7435992240680706906129825548\n",
+      "1678.997252827061916150051147\n",
+      "10.02323332815189803288160323\n",
+      "POLYGON\n",
+      "0.9998366158156138384215492515\n",
+      "0.9916650982404577986436149912\n",
+      "0.5609691957752448541820939103\n",
+      "0.5604728351490517554995250398\n",
+      "1668.358660386120586874633164\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "from web3 import Web3\n",
+    "from web3.middleware import geth_poa_middleware\n",
+    "\n",
+    "from notebooks import get_twap_bpt_price\n",
+    "\n",
+    "load_dotenv()\n",
+    "arb_web3 = Web3(Web3.HTTPProvider(os.environ[\"ARBNODEURL\"]))\n",
+    "eth_web3 = Web3(Web3.HTTPProvider(os.environ[\"ETHNODEURL\"]))\n",
+    "poly_web3 = Web3(Web3.HTTPProvider(\"https://polygon-rpc.com\"))\n",
+    "poly_web3.middleware_onion.inject(geth_poa_middleware, layer=0)\n",
+    "\n",
     "# Define constants for Arbitrum:\n",
     "ARB_CORE_POOLS = [\n",
     "    \"0xbe0f30217be1e981add883848d0773a86d2d2cd4000000000000000000000471\",\n",
@@ -60,13 +111,30 @@
     "    \"0xac2cae8d2f78a4a8f92f20dbe74042cd0a8d5af3000000000000000000000be2\",\n",
     "    \"0x402cfdb7781fa85d52f425352661128250b79e12000000000000000000000be3\",\n",
     "    \"0xab269164a10fab22bc87c39946da06c870b172d6000000000000000000000bfc\"\n",
-    "]"
+    "]\n",
+    "print(\"ARBITRUM\")\n",
+    "arb_bpt_twap_prices = {}\n",
+    "for arb_pool in ARB_CORE_POOLS:\n",
+    "    arb_bpt_twap_prices[arb_pool] = get_twap_bpt_price(arb_pool, 'arbitrum', arb_web3)\n",
+    "    print(get_twap_bpt_price(arb_pool, 'arbitrum', arb_web3))\n",
+    "    \n",
+    "print(\"MAINNET\")\n",
+    "mainnet_bpt_twap_prices = {}\n",
+    "for mainnet_pool in MAINNET_CORE_POOLS:\n",
+    "    mainnet_bpt_twap_prices[mainnet_pool] = get_twap_bpt_price(mainnet_pool, 'mainnet', eth_web3)\n",
+    "    print(get_twap_bpt_price(mainnet_pool, 'mainnet', eth_web3))\n",
+    "    \n",
+    "print(\"POLYGON\")\n",
+    "polygon_bpt_twap_prices = {}\n",
+    "for polygon_pool in POLYGON_CORE_POOLS:\n",
+    "    polygon_bpt_twap_prices[polygon_pool] = get_twap_bpt_price(polygon_pool, 'polygon', poly_web3)\n",
+    "    print(get_twap_bpt_price(polygon_pool, 'polygon', poly_web3))\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-29T15:35:50.155542Z",
-     "start_time": "2023-08-29T15:35:50.140773Z"
+     "end_time": "2023-09-01T13:55:13.210758Z",
+     "start_time": "2023-09-01T13:50:40.153068Z"
     }
    },
    "id": "39d87004addaae1b"
@@ -134,6 +202,7 @@
     "# Load mimic data\n",
     "import pandas as pd\n",
     "from web3 import Web3\n",
+    "\n",
     "mimic_df = pd.read_csv('../data/balancer_last_period_updated.csv')\n",
     "# Calculate price per token for each sale event in csv file and add it as a new column\n",
     "# Convert all amounts to float\n",
@@ -170,26 +239,16 @@
    "execution_count": 25,
    "outputs": [],
    "source": [
-    "import os\n",
     "import datetime\n",
     "from typing import Dict\n",
     "from typing import List\n",
     "from typing import Optional\n",
     "\n",
-    "from dotenv import load_dotenv\n",
     "from gql import Client\n",
     "from gql import gql\n",
     "from gql.transport.requests import RequestsHTTPTransport\n",
     "\n",
-    "from web3.middleware import geth_poa_middleware\n",
-    "\n",
-    "load_dotenv()\n",
-    "arb_web3 = Web3(Web3.HTTPProvider(os.environ[\"ARBNODEURL\"]))\n",
-    "eth_web3 = Web3(Web3.HTTPProvider(os.environ[\"ETHNODEURL\"]))\n",
-    "poly_web3 = Web3(Web3.HTTPProvider(\"https://polygon-rpc.com\"))\n",
-    "poly_web3.middleware_onion.inject(geth_poa_middleware, layer=0)\n",
     "# ARBITRUM\n",
-    "\n",
     "# TODO: \n",
     "# arb_block_now = arb_web3.eth.block_number - 1000\n",
     "arb_block_now = 122428959  # 18 August 2023\n",
@@ -331,7 +390,7 @@
     "        else:\n",
     "            for token_data in pool_snapshot_now['pool']['tokens']:\n",
     "                token_data_2_weeks_ago = \\\n",
-    "                [t for t in pool_snapshot_2_weeks_ago['pool']['tokens'] if t['address'] == token_data['address']][0]\n",
+    "                    [t for t in pool_snapshot_2_weeks_ago['pool']['tokens'] if t['address'] == token_data['address']][0]\n",
     "                token_fee = float(token_data.get('paidProtocolFees', None)) - float(\n",
     "                    token_data_2_weeks_ago.get('paidProtocolFees', None))\n",
     "                token_fees[pool_snapshot_now['pool']['symbol']].append({\n",
