feat: latest arb

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -41,14 +41,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T17:49:59.901369Z",
-     "start_time": "2023-08-04T17:49:59.884371Z"
+     "end_time": "2023-09-05T08:43:34.073539Z",
+     "start_time": "2023-09-05T08:43:34.070739Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import json\n",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T17:50:02.223289Z",
-     "start_time": "2023-08-04T17:49:59.897729Z"
+     "end_time": "2023-09-05T08:43:38.114224Z",
+     "start_time": "2023-09-05T08:43:34.076916Z"
     }
    }
   },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -146,8 +146,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T17:50:02.230990Z",
-     "start_time": "2023-08-04T17:50:02.227612Z"
+     "end_time": "2023-09-05T08:43:38.123604Z",
+     "start_time": "2023-09-05T08:43:38.112386Z"
     }
    }
   },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import os\n",
@@ -232,14 +232,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T17:50:02.419321Z",
-     "start_time": "2023-08-04T17:50:02.237434Z"
+     "end_time": "2023-09-05T08:43:39.513679Z",
+     "start_time": "2023-09-05T08:43:38.120967Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -267,8 +267,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T17:50:08.658369Z",
-     "start_time": "2023-08-04T17:50:02.422670Z"
+     "end_time": "2023-09-05T08:43:45.117738Z",
+     "start_time": "2023-09-05T08:43:39.516187Z"
     }
    }
   },
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -296,7 +296,7 @@
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xc6EeE8cb7643eC2F05F46d569e9eC8EF8b41b389</td>\n      <td>bb-a-USD</td>\n      <td>1.283592</td>\n      <td>17333.862378</td>\n      <td>17.795842</td>\n      <td>1.752762</td>\n      <td>1.75</td>\n      <td>1.002762</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.063622</td>\n      <td>15869.617778</td>\n      <td>16.292573</td>\n      <td>1.957119</td>\n      <td>1.75</td>\n      <td>1.207119</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xBe0f30217BE1e981aDD883848D0773A86d2d2CD4</td>\n      <td>rETH-bb-a-WETH-BPT</td>\n      <td>1.001525</td>\n      <td>13931.644102</td>\n      <td>14.302949</td>\n      <td>1.751476</td>\n      <td>1.75</td>\n      <td>1.001476</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>1.684935</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>2.725997</td>\n      <td>1.50</td>\n      <td>2.225997</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.791218</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.000994</td>\n      <td>1.00</td>\n      <td>1.000994</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.522396</td>\n      <td>7488.193739</td>\n      <td>7.687768</td>\n      <td>1.003142</td>\n      <td>1.00</td>\n      <td>1.003142</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x45C4D1376943Ab28802B995aCfFC04903Eb5223f</td>\n      <td>wstETH-bb-a-WETH-BPT</td>\n      <td>0.483806</td>\n      <td>6589.746329</td>\n      <td>6.765375</td>\n      <td>1.755854</td>\n      <td>1.75</td>\n      <td>1.005854</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x567ECfCB22205D279BB8Eed3E066989902bF03D5</td>\n      <td>DOLA/bbaUSD-BPT</td>\n      <td>0.370393</td>\n      <td>5201.107575</td>\n      <td>5.339727</td>\n      <td>1.750000</td>\n      <td>1.75</td>\n      <td>1.000000</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.259822</td>\n      <td>3749.804581</td>\n      <td>3.849744</td>\n      <td>1.007052</td>\n      <td>1.00</td>\n      <td>1.007052</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.213818</td>\n      <td>3212.010987</td>\n      <td>3.297617</td>\n      <td>1.026926</td>\n      <td>1.00</td>\n      <td>1.026926</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.211860</td>\n      <td>2989.457297</td>\n      <td>3.069132</td>\n      <td>1.000978</td>\n      <td>1.00</td>\n      <td>1.000978</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.108018</td>\n      <td>1528.020689</td>\n      <td>1.568745</td>\n      <td>1.000683</td>\n      <td>1.00</td>\n      <td>1.000683</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x9ceBf13BB702F253AbF1579294694A1eDAD00EAA</td>\n      <td>bbaUSDC/bbaUSDCe</td>\n      <td>0.002249</td>\n      <td>29.734546</td>\n      <td>0.030527</td>\n      <td>1.006214</td>\n      <td>1.00</td>\n      <td>1.006214</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.044847</td>\n      <td>19480.800000</td>\n      <td>20.000000</td>\n      <td>2.083537</td>\n      <td>1.75</td>\n      <td>1.333537</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.681040</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.017744</td>\n      <td>1.00</td>\n      <td>1.017744</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.583615</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>2.521792</td>\n      <td>1.50</td>\n      <td>2.021792</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.603017</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.006306</td>\n      <td>1.00</td>\n      <td>1.006306</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.650124</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.006273</td>\n      <td>1.00</td>\n      <td>1.006273</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>0.646261</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.006046</td>\n      <td>1.00</td>\n      <td>1.006046</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.496962</td>\n      <td>9279.893196</td>\n      <td>9.527220</td>\n      <td>1.001685</td>\n      <td>1.00</td>\n      <td>1.001685</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.419701</td>\n      <td>8516.680753</td>\n      <td>8.743666</td>\n      <td>1.001249</td>\n      <td>1.00</td>\n      <td>1.001249</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.303749</td>\n      <td>6927.631668</td>\n      <td>7.112266</td>\n      <td>1.016531</td>\n      <td>1.00</td>\n      <td>1.016531</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.134773</td>\n      <td>2797.145787</td>\n      <td>2.871695</td>\n      <td>1.001302</td>\n      <td>1.00</td>\n      <td>1.001302</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.080774</td>\n      <td>1699.848596</td>\n      <td>1.745153</td>\n      <td>1.000184</td>\n      <td>1.00</td>\n      <td>1.000184</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -377,8 +377,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T17:50:08.682029Z",
-     "start_time": "2023-08-04T17:50:08.679338Z"
+     "end_time": "2023-09-05T08:43:45.710110Z",
+     "start_time": "2023-09-05T08:43:45.115403Z"
     }
    }
   },
@@ -393,18 +393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Export to json\n",
     "with open('../data/arbitrumGaugeDistribution.json', 'w') as f:\n",
-    "    json.dump(arb_gauge_distributions, f, indent=4)"
+    "    json.dump(arb_gauge_distributions, f, indent=4)\n",
+    "    \n",
+    "# Export to csv\n",
+    "arb_gauge_distributions_df.to_csv('../data/arbitrumGaugeDistribution.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-04T17:50:08.703024Z",
-     "start_time": "2023-08-04T17:50:08.683445Z"
+     "end_time": "2023-09-05T08:43:45.713708Z",
+     "start_time": "2023-09-05T08:43:45.708554Z"
     }
    }
   }
