feat: dumping gauges into the json

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "# Query:\n",
@@ -41,14 +41,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T08:43:34.073539Z",
-     "start_time": "2023-09-05T08:43:34.070739Z"
+     "end_time": "2023-09-05T12:09:31.425397Z",
+     "start_time": "2023-09-05T12:09:31.413558Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "import json\n",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T08:43:38.114224Z",
-     "start_time": "2023-09-05T08:43:34.076916Z"
+     "end_time": "2023-09-05T12:09:35.463664Z",
+     "start_time": "2023-09-05T12:09:31.424892Z"
     }
    }
   },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -146,8 +146,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T08:43:38.123604Z",
-     "start_time": "2023-09-05T08:43:38.112386Z"
+     "end_time": "2023-09-05T12:09:35.468903Z",
+     "start_time": "2023-09-05T12:09:35.465647Z"
     }
    }
   },
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "import os\n",
@@ -232,14 +232,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T08:43:39.513679Z",
-     "start_time": "2023-09-05T08:43:38.120967Z"
+     "end_time": "2023-09-05T12:09:38.257976Z",
+     "start_time": "2023-09-05T12:09:35.481523Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "# Apply boost data to arb gauges\n",
@@ -267,8 +267,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T08:43:45.117738Z",
-     "start_time": "2023-09-05T08:43:39.516187Z"
+     "end_time": "2023-09-05T12:09:44.041998Z",
+     "start_time": "2023-09-05T12:09:38.261364Z"
     }
    }
   },
@@ -283,20 +283,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Unspent arb: 0.0\n",
-      "Arb distributed: 97404.0\n"
+      "Arb distributed: 100000.0\n"
      ]
     },
     {
      "data": {
       "text/plain": "<IPython.core.display.HTML object>",
-      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.044847</td>\n      <td>19480.800000</td>\n      <td>20.000000</td>\n      <td>2.083537</td>\n      <td>1.75</td>\n      <td>1.333537</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.681040</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.017744</td>\n      <td>1.00</td>\n      <td>1.017744</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.583615</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>2.521792</td>\n      <td>1.50</td>\n      <td>2.021792</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.603017</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.006306</td>\n      <td>1.00</td>\n      <td>1.006306</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.650124</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.006273</td>\n      <td>1.00</td>\n      <td>1.006273</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>0.646261</td>\n      <td>9740.400000</td>\n      <td>10.000000</td>\n      <td>1.006046</td>\n      <td>1.00</td>\n      <td>1.006046</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.496962</td>\n      <td>9279.893196</td>\n      <td>9.527220</td>\n      <td>1.001685</td>\n      <td>1.00</td>\n      <td>1.001685</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.419701</td>\n      <td>8516.680753</td>\n      <td>8.743666</td>\n      <td>1.001249</td>\n      <td>1.00</td>\n      <td>1.001249</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.303749</td>\n      <td>6927.631668</td>\n      <td>7.112266</td>\n      <td>1.016531</td>\n      <td>1.00</td>\n      <td>1.016531</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.134773</td>\n      <td>2797.145787</td>\n      <td>2.871695</td>\n      <td>1.001302</td>\n      <td>1.00</td>\n      <td>1.001302</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.080774</td>\n      <td>1699.848596</td>\n      <td>1.745153</td>\n      <td>1.000184</td>\n      <td>1.00</td>\n      <td>1.000184</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
+      "text/html": "<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>gaugeAddress</th>\n      <th>pool</th>\n      <th>symbol</th>\n      <th>voteWeight</th>\n      <th>distribution</th>\n      <th>%distribution</th>\n      <th>boost</th>\n      <th>staticBoost</th>\n      <th>dynamicBoost</th>\n      <th>cap</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0xDf464348c4EC2Bf0e5D6926b9f707c8e02301adf</td>\n      <td>0x36bf227d6BaC96e2aB1EbB5492ECec69C691943f</td>\n      <td>B-wstETH-WETH-Stable</td>\n      <td>1.042869</td>\n      <td>20000.000000</td>\n      <td>20.000000</td>\n      <td>2.079593</td>\n      <td>1.75</td>\n      <td>1.329593</td>\n      <td>20%</td>\n    </tr>\n    <tr>\n      <td>0x0EDF6cDd81BC3471C053341B7D8Dfd1Cb367AD93</td>\n      <td>0xb3028Ca124B80CFE6E9CA57B70eF2F0CCC41eBd4</td>\n      <td>50MAGIC-50USDC</td>\n      <td>0.680929</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.017578</td>\n      <td>1.00</td>\n      <td>1.017578</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8135d6AbFd42707A87A7b94c5CFA3529f9b432AD</td>\n      <td>0x32dF62dc3aEd2cD6224193052Ce665DC18165841</td>\n      <td>RDNT-WETH</td>\n      <td>2.571453</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>2.509921</td>\n      <td>1.50</td>\n      <td>2.009921</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xa8D974288Fe44ACC329D7d7a179707D27Ec4dd1c</td>\n      <td>0xc9f52540976385A84BF416903e1Ca3983c539E34</td>\n      <td>50tBTC-50WETH</td>\n      <td>0.602972</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.006231</td>\n      <td>1.00</td>\n      <td>1.006231</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x175407b4710b5A1cB67a37C76859F17fb2ff6672</td>\n      <td>0xc7FA3A3527435720f0e2a4c1378335324dd4F9b3</td>\n      <td>55auraBal-45wsteth</td>\n      <td>0.650079</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.006203</td>\n      <td>1.00</td>\n      <td>1.006203</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x56c0626E6E3931af90EbB679A321225180d4b32B</td>\n      <td>0x4a2F6Ae7F3e5D715689530873ec35593Dc28951B</td>\n      <td>wstETH/rETH/cbETH</td>\n      <td>0.646215</td>\n      <td>10000.000000</td>\n      <td>10.000000</td>\n      <td>1.005974</td>\n      <td>1.00</td>\n      <td>1.005974</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x671eD21480acf63b0AB7297b901505F5BccAfa9b</td>\n      <td>0x3FD4954a851eaD144c2FF72B1f5a38Ea5976Bd54</td>\n      <td>ankrETH/wstETH-BPT</td>\n      <td>0.496952</td>\n      <td>9530.551316</td>\n      <td>9.530551</td>\n      <td>1.001665</td>\n      <td>1.00</td>\n      <td>1.001665</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x25869f277f474FA9459F40F5D4cB0D6A8Ab41967</td>\n      <td>0x8bc65Eed474D1A00555825c91FeAb6A8255C2107</td>\n      <td>DOLA/USDC BPT</td>\n      <td>0.419695</td>\n      <td>8743.651107</td>\n      <td>8.743651</td>\n      <td>1.001235</td>\n      <td>1.00</td>\n      <td>1.001235</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xc4b6cc9A444337b1Cb8cBbDD9de4d983f609C391</td>\n      <td>0x542F16DA0efB162D20bF4358EfA095B70A100f9E</td>\n      <td>2BTC</td>\n      <td>0.303699</td>\n      <td>7108.282420</td>\n      <td>7.108282</td>\n      <td>1.016364</td>\n      <td>1.00</td>\n      <td>1.016364</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0xd758454BDF4Df7Ad85f7538DC9742648EF8e6d0A</td>\n      <td>0x8d333f82e0693f53fA48c40d5D4547142E907e1D</td>\n      <td>80PAL-20OHM</td>\n      <td>0.134817</td>\n      <td>2872.506226</td>\n      <td>2.872506</td>\n      <td>1.001628</td>\n      <td>1.00</td>\n      <td>1.001628</td>\n      <td>10%</td>\n    </tr>\n    <tr>\n      <td>0x8F7a0F9cf545DB78BF5120D3DBea7DE9c6220c10</td>\n      <td>0xa231aEa07Bb5e79aE162f95903806FC5AD65fF11</td>\n      <td>50DFX-50WETH</td>\n      <td>0.080774</td>\n      <td>1745.008932</td>\n      <td>1.745009</td>\n      <td>1.000182</td>\n      <td>1.00</td>\n      <td>1.000182</td>\n      <td>10%</td>\n    </tr>\n  </tbody>\n</table>"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -306,7 +306,7 @@
     "from IPython.core.display import HTML\n",
     "import pandas as pd\n",
     "\n",
-    "ARBITRUM_TO_DISTRIBUTE = 97404\n",
+    "ARBITRUM_TO_DISTRIBUTE = 100_000\n",
     "VOTE_CAP_IN_PERCENT = 10  # 10% cap on any single gauge\n",
     "VOTE_CAPS_IN_PERCENTS = {gauge_addr: cap_override_data.get(gauge_addr, VOTE_CAP_IN_PERCENT) for gauge_addr in\n",
     "                         arb_gauges.keys()}\n",
@@ -323,7 +323,7 @@
     "    # Cap distribution\n",
     "    to_distribute = to_distribute if to_distribute < VOTE_CAPS[gauge_addr] else VOTE_CAPS[gauge_addr]\n",
     "    arb_gauge_distributions[gauge_addr] = {\n",
-    "        # 'gaugeAddress': gauge_addr,\n",
+    "        'gaugeAddress': gauge_addr,\n",
     "        'pool': gauge_data['pool'],\n",
     "        'symbol': gauge_data['symbol'],\n",
     "        'voteWeight': gauge_data['voteWeight'],\n",
@@ -367,7 +367,7 @@
     "print(\n",
     "    f\"Unspent arb: {ARBITRUM_TO_DISTRIBUTE - sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
     "print(f\"Arb distributed: {sum([gauge['distribution'] for gauge in arb_gauge_distributions.values()])}\")\n",
-    "# Remove arb gauges with 0 distribution\n",
+    "# # Remove arb gauges with 0 distribution\n",
     "arb_gauge_distributions = {addr: gauge for addr, gauge in arb_gauge_distributions.items() if\n",
     "                           gauge['distribution'] > 0}\n",
     "arb_gauge_distributions_df = pd.DataFrame.from_dict(arb_gauge_distributions, orient='index')\n",
@@ -377,8 +377,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T08:43:45.710110Z",
-     "start_time": "2023-09-05T08:43:45.115403Z"
+     "end_time": "2023-09-05T12:09:44.060926Z",
+     "start_time": "2023-09-05T12:09:44.053995Z"
     }
    }
   },
@@ -393,21 +393,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "# Export to json\n",
     "with open('../data/arbitrumGaugeDistribution.json', 'w') as f:\n",
     "    json.dump(arb_gauge_distributions, f, indent=4)\n",
-    "    \n",
+    "\n",
     "# Export to csv\n",
-    "arb_gauge_distributions_df.to_csv('../data/arbitrumGaugeDistribution.csv', index=False)"
+    "arb_gauge_distributions_df.to_csv('../data/arbitrumGaugeDistribution.csv', index=False)\n",
+    "\n",
+    "# Dump into output.json using:\n",
+    "with open('../data/output.json') as f:\n",
+    "    output_data = json.load(f)\n",
+    "\n",
+    "# Find transaction with func name `setRecipientList` and dump gauge \n",
+    "gauge_distributions = arb_gauge_distributions.values()\n",
+    "assert sum([gauge['distribution'] for gauge in gauge_distributions]) == ARBITRUM_TO_DISTRIBUTE\n",
+    "for tx in output_data['transactions']:\n",
+    "    if tx['contractMethod']['name'] == 'setRecipientList':\n",
+    "        # Inject list of gauges addresses:\n",
+    "        tx['contractInputsValues'][\n",
+    "            'gaugeAddresses'] = f\"[{','.join([gauge['gaugeAddress'] for gauge in gauge_distributions])}]\"\n",
+    "        # Inject vote weights:\n",
+    "        tx['contractInputsValues']['amountsPerPeriod'] = f\"[{','.join([str(int(gauge['distribution'] * 1e18)) for gauge in gauge_distributions])}]\"\n",
+    "        break\n",
+    "\n",
+    "# Dump back to arb_distribution_for_msig.json\n",
+    "with open('../data/arb_distribution_for_msig.json', 'w') as f:\n",
+    "    json.dump(output_data, f, indent=4)\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-09-05T08:43:45.713708Z",
-     "start_time": "2023-09-05T08:43:45.708554Z"
+     "end_time": "2023-09-05T12:09:44.081394Z",
+     "start_time": "2023-09-05T12:09:44.059084Z"
     }
    }
   }
