chore: change file name from output -> template file

--- a/notebooks/arb_distribution.ipynb
+++ b/notebooks/arb_distribution.ipynb
@@ -404,7 +404,7 @@
     "arb_gauge_distributions_df.to_csv('../data/arbitrumGaugeDistribution.csv', index=False)\n",
     "\n",
     "# Dump into output.json using:\n",
-    "with open('../data/output.json') as f:\n",
+    "with open('../data/output_tx_template.json') as f:\n",
     "    output_data = json.load(f)\n",
     "\n",
     "# Find transaction with func name `setRecipientList` and dump gauge \n",
